--- a/Covid_data_analysis_Illinois.ipynb
+++ b/Covid_data_analysis_Illinois.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "headed-metabolism",
+   "id": "incorporate-worry",
    "metadata": {},
    "source": [
     "# Illinois State Covid-19 Data Analysis Project\n",
@@ -14,13 +14,13 @@
     "\n",
     "This repository is for the project's website: https://github.com/nytimes/covid-19-data.\n",
     "\n",
-    "Start by importing the relevant libraries I plan on using as well as the dataset"
+    "Start by importing the relevant libraries I plan on using as well as the dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "proved-portable",
+   "id": "cultural-coupon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "entitled-secret",
+   "id": "polish-commodity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,18 +41,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "young-appearance",
+   "id": "framed-consent",
    "metadata": {},
    "source": [
     "## 1. Dataset\n",
     "\n",
-    "Let's get some info on this dataset"
+    "Let's get some info on this dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "educational-transaction",
+   "id": "thorough-beaver",
    "metadata": {},
    "outputs": [
     {
@@ -128,16 +128,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-search",
+   "id": "modified-reducing",
    "metadata": {},
    "source": [
-    "First, let's check for any missing data"
+    "First, let's check for any missing data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "wireless-amsterdam",
+   "id": "varied-tobacco",
    "metadata": {},
    "outputs": [
     {
@@ -210,16 +210,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southeast-collector",
+   "id": "specialized-delay",
    "metadata": {},
    "source": [
-    "Then, let's view the dataset"
+    "Then, let's view the dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "hybrid-breath",
+   "id": "three-reduction",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acceptable-alberta",
+   "id": "determined-fifth",
    "metadata": {},
    "source": [
     "We see that there are some missing data in two college columns, which means we lack case data for two colleges or univerisities. Therefore, we need to aviod the two cooleges/universities when analysing data."
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opponent-wagon",
+   "id": "interpreted-diabetes",
    "metadata": {},
    "source": [
     "## 2. Handling the missing values"
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laden-spice",
+   "id": "stuffed-corner",
    "metadata": {},
    "source": [
     "Let's simplify this DataFrame."
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "twelve-shade",
+   "id": "placed-township",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "imperial-copper",
+   "id": "accredited-pleasure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sonic-knock",
+   "id": "underlying-sending",
    "metadata": {},
    "source": [
     "Now, we have a simplified DataFrame."
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "colonial-reliance",
+   "id": "peripheral-professor",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "political-paintball",
+   "id": "continent-prompt",
    "metadata": {},
    "source": [
     "## 3. Graphing Cases and Time Data"
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "important-gregory",
+   "id": "opening-shift",
    "metadata": {},
    "source": [
     "The missing values are now successfully handled.\n",
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "liquid-celebrity",
+   "id": "settled-collar",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjacent-tournament",
+   "id": "operating-exchange",
    "metadata": {},
    "source": [
     "Second, let's view graphs for each college and univerisity."
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "compound-fisher",
+   "id": "amino-mobility",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faced-texas",
+   "id": "right-continuity",
    "metadata": {},
    "source": [
     "From the graphs, we can see that University of Illinois Urbana-Champaign have the most number of positive cases. "
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-pizza",
+   "id": "hidden-olive",
    "metadata": {},
    "source": [
     "## 4. Processing the data (part i)"
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collect-toronto",
+   "id": "israeli-speaker",
    "metadata": {},
    "source": [
     "Since population of each college and university varies, there is a bias when we compare positive case numbers of different institutions. To explore more about trends, we compute the growth of positive cases in each institution.\n",
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "convinced-fight",
+   "id": "separate-russian",
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-contract",
+   "id": "rapid-production",
    "metadata": {},
    "source": [
     "Second, create a new DataFrame(df_growth), which only shows the growth."
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "lucky-property",
+   "id": "historic-treasury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "impossible-belly",
+   "id": "spread-alert",
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "missing-budget",
+   "id": "equal-highlight",
    "metadata": {},
    "source": [
     "Let's plot each growth tendency."
@@ -1497,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "norwegian-traffic",
+   "id": "italic-digit",
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacterial-folder",
+   "id": "foreign-canyon",
    "metadata": {},
    "source": [
     "## 5. Processing the data (part ii)"
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-netherlands",
+   "id": "sudden-external",
    "metadata": {},
    "source": [
     "To see more concise progress for each institution, let's calculate the percentage of changes.\n",
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "operating-apartment",
+   "id": "abroad-double",
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominant-canada",
+   "id": "automated-former",
    "metadata": {},
    "source": [
     "Second, create a new DataFrame(df_pct_growth), which only shows the percentage of growth."
@@ -1857,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "approximate-wallace",
+   "id": "solar-karma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "dated-hampshire",
+   "id": "express-stamp",
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "present-origin",
+   "id": "disciplinary-roberts",
    "metadata": {},
    "source": [
     "Then, plot the percentage of changes."
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "legitimate-prince",
+   "id": "mineral-width",
    "metadata": {},
    "outputs": [
     {
@@ -2224,7 +2224,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "collaborative-setup",
+   "id": "fiscal-petroleum",
    "metadata": {},
    "outputs": [
     {
@@ -2297,7 +2297,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "wired-router",
+   "id": "chief-animal",
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "three-effect",
+   "id": "successful-stuff",
    "metadata": {},
    "source": [
     "Therefore, 47 in 50 institutions have the decreasing tendency, which is a optimistic development. "
@@ -2329,7 +2329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appreciated-fraction",
+   "id": "human-desktop",
    "metadata": {},
    "source": [
     "## 6. Making predictions and evaluating performance"
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "usual-appreciation",
+   "id": "suburban-india",
    "metadata": {},
    "source": [
     "Since the latest update from The New York Times, the source of this dataset, is on 2020/12/11, predicting and evaluating the data is a good idea. \n",
@@ -2346,14 +2346,6 @@
     "\n",
     "Therefore, we could make predicitons that the number of Covid cases would growing tremendously at the beginning of next semester. \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "educational-klein",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
